<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    // first layout: contains message to user "please introduce"
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:orientation="horizontal">-->
        <TextView
            android:id="@+id/textRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/inputParameters"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="14sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/textHello"
            tools:textSize="24sp" />
    <!--</LinearLayout>-->


    // second line: height text, input field, button
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="4"-->
        <!--android:orientation="horizontal" >-->

        <Button
            style="@style/OKbutton"
            android:text="OK3"
            app:layout_constraintStart_toEndOf="@+id/editHeight"
            app:layout_constraintTop_toTopOf="parent" />
    <!--</LinearLayout>-->

    <TextView
        android:id="@+id/textHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textHeight"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRequest" />

    <TextView
        android:id="@+id/textWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textWeight"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeight" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textAge"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWeight" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enterHeight"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textHeight"
        app:layout_constraintTop_toBottomOf="@+id/textRequest" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enterWeight"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textWeight"
        app:layout_constraintTop_toBottomOf="@+id/textHeight" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enterAge"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textAge"
        app:layout_constraintTop_toBottomOf="@+id/textWeight" />
    
    <RelativeLayout android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/editAge"
        app:layout_constraintEnd_toEndOf="parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <Button
            style="@style/OKbutton"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:text="DONE" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textAllSet"
        android:layout_width="254dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif-monospace"
        android:text="@string/ready"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/textAge"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/setup_hello"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/textRequest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>