<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/geom4"
    tools:context=".Workout">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textWorkoutHeader"
            android:layout_marginTop="24dp"
            android:text="@string/workoutHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/layoutSquat"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:onClick="enterSquat"
            android:layout_height="170dp"
            android:paddingLeft="30dp"
            android:paddingRight="5dp">

            <ImageView
                android:id="@+id/doodleSquat"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logosquat" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp">
                <TextView
                    android:id="@+id/textViewSquat"
                    style="@style/WORKOUTtexts"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/textSquat"
                    android:textSize="40sp" />
                <TextView
                    android:id="@+id/textViewSquatUnder"
                    style="@style/WORKOUTtexts"
                    android:text="@string/textSquatEnum"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBiceps"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/shape"
            android:onClick="enterBiceps"
            android:paddingLeft="2dp"
            android:paddingRight="5dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/doodleBiceps"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logodumbbell" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewBiceps"
                    style="@style/WORKOUTtexts"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/textBiceps"
                    android:textSize="38dp" />
                <TextView
                    android:id="@+id/textViewBicepsUnder"
                    style="@style/WORKOUTtexts"
                    android:text="@string/textBicepsEnum"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:id="@+id/layoutLunge"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="170dp"-->
        <!--android:background="@drawable/shape"-->
        <!--android:onClick="enterLunge"-->
        <!--android:paddingLeft="5dp"-->
        <!--android:paddingRight="5dp"-->
        <!--android:layout_marginTop="20dp">-->
        <!--<ImageView-->
        <!--android:id="@+id/doodleLunge"-->
        <!--android:layout_width="140dp"-->
        <!--android:layout_height="match_parent"-->
        <!--app:srcCompat="@drawable/logorun" />-->

        <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical">-->
        <!--<TextView-->
        <!--android:id="@+id/textViewLunges"-->
        <!--style="@style/WORKOUTtexts"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="@string/textLunges"-->
        <!--android:textSize="38dp" />-->
        <!--<TextView-->
        <!--android:id="@+id/textViewLungesUnder"-->
        <!--style="@style/WORKOUTtexts"-->
        <!--android:text="@string/textLungesEnum"-->
        <!--android:textSize="24sp" />-->

        <!--</LinearLayout>-->
        <!--</LinearLayout>-->


        <LinearLayout
            android:id="@+id/layoutPlank"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/shape"
            android:onClick="enterPlank"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/doodlePlank"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logorun" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewPlank"
                    style="@style/WORKOUTtexts"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/textPlank"
                    android:textSize="34dp" />
                <TextView
                    android:id="@+id/textViewPlankUnder"
                    style="@style/WORKOUTtexts"
                    android:text="@string/textPlankEnum"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/workout_low_text"
            android:textAlignment="center"
            android:textSize="22dp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>
</ScrollView>